--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -3,11 +3,11 @@ html {
 }
 
 body {
- color: #161616   
+    color: var(--text-color)  
 }
 
 a {
-    color: #161616
+    color: var(--text-color)
 }
 
 .visually-hidden {
@@ -15,11 +15,11 @@ a {
 }
 
 .card-category {
-    color: #D73953;
+    color: var(--color-primary);
 }
 
 .section-tagline {
-    color: #D73953;
+    color: var(--color-primary);
 }
 
 :root {
@@ -28,5 +28,5 @@ a {
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: #090909;
+    --text-color: var(--color-black);
 }
