--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -1,6 +1,6 @@
 html {
     scroll-behavior: smooth;
-    font-size: 62,5%;
+    font-size: 62.5%;
 }
 
 body {
@@ -36,7 +36,7 @@ a {
     --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
-    --font-sizelarge: 1.8rem;
+    --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
 
