--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -1,6 +1,6 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 * {
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 
 html {
