--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -38,25 +38,16 @@ a {
 }
 
 .section {
-    padding-top: var(--section-padding);
-    padding-bottom: var(--section-padding);
-    padding-right: var(--section-padding);
-    padding-left: var(--section-padding);
+    padding: var(--section-padding);
 }
 
 .section-header {
     text-align: var(--section-header-align);
-    padding-top: var(--section-header-padding);
-    padding-bottom: var(--section-header-padding);
-    padding-right: var(--section-header-padding);
-    padding-left: var(--section-header-padding);
+    padding: var(--section-header-padding);
 }
 
 .section-body {
-    padding-top: var(--section-body-padding);
-    padding-bottom: var(--section-body-padding);
-    padding-right: var(--section-body-padding);
-    padding-left: var(--section-body-padding);
+    padding: var(--section-body-padding);
 }
 
 .section-title {
@@ -143,8 +134,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer {
-    padding-top: var(--footer-padding);
-    padding-bottom: var(--footer-padding);
-    padding-right: var(--footer-padding);
-    padding-left: var(--footer-padding);
+    padding: var(--footer-padding);
 }
