--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -59,10 +59,7 @@ a {
 }
 
 .section-footer {
-    padding-top: var(--section-footer-padding);
-    padding-bottom: var(--section-footer-padding);
-    padding-right: var(--section-footer-padding);
-    padding-left: var(--section-footer-padding);
+    padding: var(--section-footer-padding);
     text-align: var(--section-footer-align);
 }
 
