--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -112,7 +112,7 @@ a {
     --nav-item-letter-spacing: 0.4rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: var(--color-primary);
+    --nav-item-link-hover: var(--color-white);
     --section-tagline-margin: 0;
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
@@ -325,7 +325,7 @@ ul.row {
     height: 0.2rem;
 }
 
-.nav .nav-item:hover .nav-link {
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
